hyper almost done

--- a/jupyter_notebooks/cleaning_profile_data.ipynb
+++ b/jupyter_notebooks/cleaning_profile_data.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "The profiles are composed by consumption and production data. The data is real and anonymized, which will provided a more realistic representation of the behaviour of the systems in this study. The data is composed by:\n",
     "- Consumption data: 69 time stamped data with the duration of one year.\n",
-    "- PV Production data: 10 time stamped data with the duration of one year.\n",
-    "- Wind Production data: 20 time stamped data with the duration of one year.\n"
+    "- PV Production data: 10 time stamped data with the duration of two years.\n",
+    "- Wind Production data: 20 time stamped data with the duration of two year.\n"
    ]
   },
   {
@@ -203,7 +203,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>value</th>\n",
+       "      <th>T</th>\n",
+       "      <th>R</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 00:15:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 00:30:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 00:45:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70171</th>\n",
+       "      <td>2021-12-31 22:45:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70172</th>\n",
+       "      <td>2021-12-31 23:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70173</th>\n",
+       "      <td>2021-12-31 23:15:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70174</th>\n",
+       "      <td>2021-12-31 23:30:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70175</th>\n",
+       "      <td>2021-12-31 23:45:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70176 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      date  value   T   R\n",
+       "0      2020-01-01 00:00:00    0.0 NaN NaN\n",
+       "1      2020-01-01 00:15:00    0.0 NaN NaN\n",
+       "2      2020-01-01 00:30:00    0.0 NaN NaN\n",
+       "3      2020-01-01 00:45:00    0.0 NaN NaN\n",
+       "4      2020-01-01 01:00:00    0.0 NaN NaN\n",
+       "...                    ...    ...  ..  ..\n",
+       "70171  2021-12-31 22:45:00    0.0 NaN NaN\n",
+       "70172  2021-12-31 23:00:00    0.0 NaN NaN\n",
+       "70173  2021-12-31 23:15:00    0.0 NaN NaN\n",
+       "70174  2021-12-31 23:30:00    0.0 NaN NaN\n",
+       "70175  2021-12-31 23:45:00    0.0 NaN NaN\n",
+       "\n",
+       "[70176 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pv_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1118,6 +1259,168 @@
     "wind_data = ut.get_csv_from_folder(data_path)\n",
     "convert_to_timestamped_data(wind_data)\n",
     "describe_data(wind_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>T</th>\n",
+       "      <th>R</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_direction</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:00:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:15:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:30:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:45:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 01:00:00</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 22:45:00</th>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:00:00</th>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:15:00</th>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:30:00</th>\n",
+       "      <td>1600.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:45:00</th>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70176 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      value   T   R  wind_speed  wind_direction\n",
+       "date                                                           \n",
+       "2020-01-01 00:00:00     0.0 NaN NaN         NaN             NaN\n",
+       "2020-01-01 00:15:00     0.0 NaN NaN         NaN             NaN\n",
+       "2020-01-01 00:30:00     0.0 NaN NaN         NaN             NaN\n",
+       "2020-01-01 00:45:00     0.0 NaN NaN         NaN             NaN\n",
+       "2020-01-01 01:00:00     0.0 NaN NaN         NaN             NaN\n",
+       "...                     ...  ..  ..         ...             ...\n",
+       "2021-12-31 22:45:00  1400.0 NaN NaN         NaN             NaN\n",
+       "2021-12-31 23:00:00  1360.0 NaN NaN         NaN             NaN\n",
+       "2021-12-31 23:15:00  1400.0 NaN NaN         NaN             NaN\n",
+       "2021-12-31 23:30:00  1600.0 NaN NaN         NaN             NaN\n",
+       "2021-12-31 23:45:00  2080.0 NaN NaN         NaN             NaN\n",
+       "\n",
+       "[70176 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wind_data[0]"
    ]
   },
   {
@@ -2049,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2778,6 +3081,181 @@
     "convert_to_timestamped_data(conso_data)\n",
     "describe_data(conso_data)\n",
     "add_year_month_to_df(conso_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>T</th>\n",
+       "      <th>R</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:00:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>281.969500</td>\n",
+       "      <td>405.454167</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:15:00</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>281.924375</td>\n",
+       "      <td>371.666319</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:30:00</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>281.879250</td>\n",
+       "      <td>337.878472</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 00:45:00</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>281.834125</td>\n",
+       "      <td>304.090625</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01 01:00:00</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>281.789000</td>\n",
+       "      <td>270.302778</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-19 15:00:00</th>\n",
+       "      <td>137.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>289.109000</td>\n",
+       "      <td>1446.111111</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-19 15:15:00</th>\n",
+       "      <td>144.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>288.933667</td>\n",
+       "      <td>1477.257716</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-19 15:30:00</th>\n",
+       "      <td>133.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>288.758333</td>\n",
+       "      <td>1508.404321</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-19 15:45:00</th>\n",
+       "      <td>143.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>288.583000</td>\n",
+       "      <td>1539.550926</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-19 16:00:00</th>\n",
+       "      <td>135.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>288.407667</td>\n",
+       "      <td>1570.697531</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45569 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         P     Q           T            R  year  month\n",
+       "date                                                                  \n",
+       "2020-01-01 00:00:00   70.0   2.0  281.969500   405.454167  2020      1\n",
+       "2020-01-01 00:15:00   72.0   2.0  281.924375   371.666319  2020      1\n",
+       "2020-01-01 00:30:00   68.0   2.0  281.879250   337.878472  2020      1\n",
+       "2020-01-01 00:45:00   70.0   6.0  281.834125   304.090625  2020      1\n",
+       "2020-01-01 01:00:00   72.0   5.0  281.789000   270.302778  2020      1\n",
+       "...                    ...   ...         ...          ...   ...    ...\n",
+       "2021-04-19 15:00:00  137.0  40.0  289.109000  1446.111111  2021      4\n",
+       "2021-04-19 15:15:00  144.0  37.0  288.933667  1477.257716  2021      4\n",
+       "2021-04-19 15:30:00  133.0  38.0  288.758333  1508.404321  2021      4\n",
+       "2021-04-19 15:45:00  143.0  40.0  288.583000  1539.550926  2021      4\n",
+       "2021-04-19 16:00:00  135.0  39.0  288.407667  1570.697531  2021      4\n",
+       "\n",
+       "[45569 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conso_data[0]"
    ]
   },
   {
