--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "res_bus_vm_pu = pd.read_csv('..\\data\\ground_truth\\pf_res_bus_vm_pu.csv')\n",
     "res_line_i_ka = pd.read_csv('..\\data\\ground_truth\\pf_res_line_i_ka.csv')\n",
     "res_line_percent = pd.read_csv('..\\data\\ground_truth\\pf_res_line_loading_percent.csv')\n",
+    "exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv')\n",
     "timestamps = res_bus_vm_pu['timestamps'].apply(lambda x: pd.to_datetime(x))\n",
     "res_bus_vm_pu.drop('timestamps', axis=1, inplace=True)\n",
     "res_line_i_ka.drop('timestamps', axis=1, inplace=True)\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
        "[2 rows x 34 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
        "[2 rows x 34 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,10 +472,14 @@
     "        if not row[1].any():\n",
     "            indexes.append(row[0])\n",
     "    return df.drop(indexes)\n",
-    "res_bus_vm_pu_min_bal_constr = get_balanced_df(res_bus_vm_pu_min_constr ,res_bus_vm_pu_min_bool_constr)\n",
-    "res_bus_vm_pu_max_bal_constr = get_balanced_df(res_bus_vm_pu_max_constr ,res_bus_vm_pu_max_bool_constr)\n",
-    "res_line_i_ka_max_bal_constr = get_balanced_df(res_line_i_ka_max_constr ,res_line_i_ka_max_bool_constr)\n",
-    "res_line_percent_bal_constr = get_balanced_df(res_line_percent_constr ,res_line_percent_bool_constr)"
+    "res_bus_vm_pu_min_bal_constr = get_balanced_df(res_bus_vm_pu_min_constr, res_bus_vm_pu_min_bool_constr)\n",
+    "exogenous_data_vm_pu_min_bal = get_balanced_df(exogenous_data, res_bus_vm_pu_min_bool_constr)\n",
+    "res_bus_vm_pu_max_bal_constr = get_balanced_df(res_bus_vm_pu_max_constr, res_bus_vm_pu_max_bool_constr)\n",
+    "exogenous_data_vm_pu_max_bal = get_balanced_df(exogenous_data, res_bus_vm_pu_max_bool_constr)\n",
+    "res_line_i_ka_max_bal_constr = get_balanced_df(res_line_i_ka_max_constr, res_line_i_ka_max_bool_constr)\n",
+    "exogenous_data_i_ka_max_bal = get_balanced_df(exogenous_data, res_line_i_ka_max_bool_constr)\n",
+    "res_line_percent_bal_constr = get_balanced_df(res_line_percent_constr, res_line_percent_bool_constr)\n",
+    "exogenous_data_percent_bal = get_balanced_df(exogenous_data, res_line_percent_bool_constr)"
    ]
   },
   {
@@ -495,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,29 +510,29 @@
     "res_bus_vm_pu_min_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_constr.csv', index=False)\n",
     "res_bus_vm_pu_min_bool_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_min_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_bool_constr.csv', index=False)\n",
-    "res_bus_vm_pu_min_bal_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_min_bal_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_bal_constr.csv', index=False)\n",
+    "exogenous_data_vm_pu_min_bal.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_bal.csv', index=False)\n",
     "# max_vm_pu\n",
     "res_bus_vm_pu_max_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_max_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_constr.csv', index=False)\n",
     "res_bus_vm_pu_max_bool_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_max_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bool_constr.csv', index=False)\n",
-    "res_bus_vm_pu_max_bal_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_max_bal_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bal_constr.csv', index=False)\n",
+    "exogenous_data_vm_pu_max_bal.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_bal.csv', index=False)\n",
     "# max i_ka\n",
     "res_line_i_ka_max_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_constr.csv', index=False)\n",
     "res_line_i_ka_max_bool_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_bool_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_bool_constr.csv', index=False)\n",
-    "res_line_i_ka_max_bal_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_bal_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_bal_constr.csv', index=False)\n",
+    "exogenous_data_i_ka_max_bal.to_csv('..\\data\\ground_truth\\\\exogenous_data_i_ka_max_bal.csv', index=False)\n",
     "# max line loading\n",
     "res_line_percent_constr['timestamps'] = timestamps\n",
     "res_line_percent_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_constr.csv', index=False)\n",
     "res_line_percent_bool_constr['timestamps'] = timestamps\n",
     "res_line_percent_bool_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_bool_constr.csv', index=False)\n",
-    "res_line_percent_bal_constr['timestamps'] = timestamps\n",
-    "res_line_percent_bal_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_bal_constr.csv', index=False)\n"
+    "res_line_percent_bal_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_bal_constr.csv', index=False)\n",
+    "exogenous_data_percent_bal.to_csv('..\\data\\ground_truth\\\\exogenous_data_percent_bal.csv', index=False)"
    ]
   }
  ],
