datsets experience results

--- a/jupyter_notebooks/datasets_benchmark.ipynb
+++ b/jupyter_notebooks/datasets_benchmark.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        " 'loss': 'squared_error'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
     "from thesis_package import aimodels as my_ai, utils, metrics\n",
-    "\n",
+    "from copy import deepcopy\n",
     "import sklearn.metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,27 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['params_gradient_boost_regression_sparse_max_u.csv', 'params_gradient_boost_regression_sparse_min_u.csv', 'params_support_vector_regression_sparse_max_u.csv', 'params_support_vector_regression_sparse_min_u.csv', 'params_xgboost_regression_sparse_max_u.csv', 'params_xgboost_regression_sparse_min_u.csv'])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sparse_hyper_params.keys()"
+    "sparse_hyper_params.keys()\n",
+    "results = {'max_u_regressor_sparse': {'lr': None, 'gb': None, 'xgb': None, 'svr': None},\n",
+    "           'max_u_regressor_focused': {'lr': None, 'gb': None, 'xgb': None, 'svr': None},\n",
+    "           'max_u_classifier': {'gb': None, 'xgb': None, 'svr': None},\n",
+    "           'min_u_regressor_sparse': {'lr': None, 'gb': None, 'xgb': None, 'svr': None},\n",
+    "           'min_u_regressor_focused':{'lr': None, 'gb': None, 'xgb': None, 'svr': None},\n",
+    "           'min_u_classifier': {'gb': None, 'xgb': None, 'svr': None}\n",
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -485,15 +481,19 @@
     "# Linear Regression\n",
     "prediction_lr_max_u = regressor_max_u.strategies[0].predict(data=data_max_u_sparse)\n",
     "prediction_lr_max_u = pd.DataFrame(prediction_lr_max_u , columns=data_max_u_sparse['y_test'].columns)\n",
+    "results['max_u_regressor_sparse']['lr'] = deepcopy(prediction_lr_max_u)\n",
     "# Gradient Boost Regression\n",
     "prediction_gb_max_u =  regressor_max_u.strategies[1].predict(data=data_max_u_sparse)\n",
     "prediction_gb_max_u = pd.DataFrame(prediction_gb_max_u, columns=data_max_u_sparse['y_test'].columns)\n",
+    "results['max_u_regressor_sparse']['gb'] = deepcopy(prediction_gb_max_u)\n",
     "# Extreme GBoost Regression\n",
     "prediction_xgb_max_u =  regressor_max_u.strategies[2].predict(data=data_max_u_sparse)\n",
     "prediction_xgb_max_u = pd.DataFrame(prediction_xgb_max_u, columns=data_max_u_sparse['y_test'].columns)\n",
+    "results['max_u_regressor_sparse']['xgb'] = deepcopy(prediction_xgb_max_u)\n",
     "# Support Vector Regression\n",
     "prediction_svr_max_u =  regressor_max_u.strategies[3].predict(data=data_max_u_scaled_sparse)\n",
-    "prediction_svr_max_u = pd.DataFrame(prediction_svr_max_u, columns=data_max_u_sparse['y_test'].columns)"
+    "prediction_svr_max_u = pd.DataFrame(prediction_svr_max_u, columns=data_max_u_sparse['y_test'].columns)\n",
+    "results['max_u_regressor_sparse']['svr'] = deepcopy(prediction_svr_max_u)"
    ]
   },
   {
@@ -525,15 +525,19 @@
     "# Linear Regression\n",
     "prediction_lr_max_u = regressor_max_u.strategies[0].predict(data=data_max_u_focused)\n",
     "prediction_lr_max_u = pd.DataFrame(prediction_lr_max_u , columns=data_max_u_focused['y_test'].columns)\n",
+    "results['max_u_regressor_focused']['lr'] = deepcopy(prediction_lr_max_u)\n",
     "# Gradient Boost Regression\n",
     "prediction_gb_max_u =  regressor_max_u.strategies[1].predict(data=data_max_u_focused)\n",
     "prediction_gb_max_u = pd.DataFrame(prediction_gb_max_u, columns=data_max_u_focused['y_test'].columns)\n",
+    "results['max_u_regressor_focused']['gb'] = deepcopy(prediction_gb_max_u)\n",
     "# Extreme GBoost Regression\n",
     "prediction_xgb_max_u =  regressor_max_u.strategies[2].predict(data=data_max_u_focused)\n",
     "prediction_xgb_max_u = pd.DataFrame(prediction_xgb_max_u, columns=data_max_u_focused['y_test'].columns)\n",
+    "results['max_u_regressor_focused']['xgb'] = deepcopy(prediction_xgb_max_u)\n",
     "# Support Vector Regression\n",
     "prediction_svr_max_u =  regressor_max_u.strategies[3].predict(data=data_max_u_scaled_focused)\n",
-    "prediction_svr_max_u = pd.DataFrame(prediction_svr_max_u, columns=data_max_u_focused['y_test'].columns)"
+    "prediction_svr_max_u = pd.DataFrame(prediction_svr_max_u, columns=data_max_u_focused['y_test'].columns)\n",
+    "results['max_u_regressor_focused']['svr'] = deepcopy(prediction_svr_max_u)"
    ]
   },
   {
