first set of resutls comming

--- a/jupyter_notebooks/neural_network_intro.ipynb
+++ b/jupyter_notebooks/neural_network_intro.ipynb
@@ -69,6 +69,7 @@
     "from thesis_package import utils\n",
     "\n",
     "y_max_u_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bool_constr.csv').drop(columns='timestamps')\n",
+    "y_max_u = y_max_u_bool[utils.cols_with_positive_values(y_max_u_bool)]\n",
     "exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
     "X_max_u_bool_train, X_max_u_bool_test, y_max_u_bool_train, y_max_u_bool_test = utils.split_and_suffle(exogenous_data, y_max_u_bool, scaling=True)\n",
     "data = {'X_train': torch.tensor(X_max_u_bool_train),\n",
@@ -100,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we define a model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -114,12 +122,24 @@
     "        out_features = 20\n",
     "        layers.append(nn.Linear(in_features, out_features))\n",
     "        layers.append(nn.ReLU())\n",
-    "        p = 0.5\n",
+    "        p = 0.5 # Probability of element being zeroed.\n",
     "        layers.append(nn.Dropout(p))\n",
     "        in_features = out_features\n",
     "    layers.append(nn.Linear(in_features, CLASSES))\n",
     "    layers.append(nn.Sigmoid())\n",
     "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model  = define_model()\n",
+    "optimizer = 'Adam'\n",
+    "lr = 0.001\n",
+    "optimizer = \n"
    ]
   }
  ],
