implementing FF-NN

--- a/jupyter_notebooks/neural_network_intro.ipynb
+++ b/jupyter_notebooks/neural_network_intro.ipynb
@@ -85,8 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optuna\n",
-    "from optuna.trial import TrialState\n",
+    "# import optuna\n",
+    "# from optuna.trial import TrialState\n",
     "# Setup\n",
     "import torch \n",
     "import torch.nn as nn\n",
@@ -113,21 +113,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def define_model():\n",
-    "    # Optimize the number of layers, hidden units and dropout rate.\n",
-    "    n_layers = 2\n",
-    "    layers = []\n",
-    "    in_features = data['X_train'].shape[1]\n",
-    "    for i in range(n_layers):\n",
-    "        out_features = 20\n",
-    "        layers.append(nn.Linear(in_features, out_features))\n",
-    "        layers.append(nn.ReLU())\n",
-    "        p = 0.5 # Probability of element being zeroed.\n",
-    "        layers.append(nn.Dropout(p))\n",
-    "        in_features = out_features\n",
-    "    layers.append(nn.Linear(in_features, CLASSES))\n",
-    "    layers.append(nn.Sigmoid())\n",
-    "    return nn.Sequential(*layers)"
+    "class FeedforwardNetwork(nn.Module):\n",
+    "    def __init__(self, n_classes, n_features, hidden_size, layers, activation_type, dropout, **kwargs):\n",
+    "        super(FeedforwardNetwork, self).__init__() # Understand this line.\n",
+    "        self.feedforward = nn.Sequential(\n",
+    "            nn.Linear(n_features, hidden_size),\n",
+    "            nn.Tanh(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(hidden_size, hidden_size),\n",
+    "            nn.Tanh(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(hidden_size, n_classes),\n",
+    "        )\n",
+    "    def forward(self, x, **kwargs):\n",
+    "        \"\"\"\n",
+    "        x (batch_size, n_features): a batch of training examples.\n",
+    "        This method needs to perfoms all the ocmputation needed \n",
+    "        to compute the output logits from x. This will include\n",
+    "        using various hidden layers, pointwise nonlinear functions,\n",
+    "        and droput.\n",
+    "        \"\"\"\n",
+    "        return self.feedforward(x)\n",
+    "    def train_batch(X, y, model, otimizer, criterion, device, **kwargs):\n",
+    "        \"\"\"\n",
+    "        X (batch_size, n_features): a batch of training examples.\n",
+    "        y (batch_size): a batch of training labels.\n",
+    "        model (nn.Module): the neural network.\n",
+    "        optimizer (optim.Optimizer): the optimizer.\n",
+    "        criterion (nn.Module): the loss function.\n",
+    "        device (torch.device): the device to use for training.\n",
+    "        \"\"\"\n",
+    "        model.train()\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        y_pred = model(X)\n",
+    "        loss = criterion(y_pred, y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        return loss.item()\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -135,12 +160,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model  = define_model()\n",
-    "optimizer = 'Adam'\n",
-    "lr = 0.001\n",
-    "optimizer = \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
